# rb5-flight-summer-dev_ws

./: .gitignore  .gitmodules  Dockerfile  README.md  requirements.txt
rb5_flight/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
rb5_flight/devel/include/natnet_ros_cpp/: MarkerPosesRequest.h  MarkerPosesResponse.h
rb5_flight/devel/include/rb5_navigation/: ImageWithCentroids.h
rb5_flight/devel/lib/mavros-interfaces/: mavros-interfaces_node
rb5_flight/devel/lib/mavros_test/: mavros_test_node
rb5_flight/devel/lib/mocap_optitrack/: mocap_node
rb5_flight/devel/lib/natnet_ros_cpp/: marker_poses_server  natnet_ros_cpp
rb5_flight/devel/lib/pkgconfig/: mavros-interfaces.pc  mavros_test.pc  mocap_optitrack.pc  natnet_ros_cpp.pc  optitrack-vrpn.pc  rb5_navigation.pc  rb5_simulation.pc
rb5_flight/devel/lib/python2.7/dist-packages/rb5_navigation/msg/: _ImageWithCentroids.py  __init__.py
rb5_flight/devel/lib/rb5_navigation/: position_node  takeoff_node  teleop_ros_node
rb5_flight/devel/lib/rb5_simulation/: sim_takeoff_node  sim_teleop_node
rb5_flight/devel/share/common-lisp/ros/rb5_navigation/msg/: ImageWithCentroids.lisp  _package.lisp  _package_ImageWithCentroids.lisp  rb5_navigation-msg.asd
rb5_flight/devel/share/gennodejs/ros/rb5_navigation/msg/: ImageWithCentroids.js  _index.js
rb5_flight/devel/share/mavros-interfaces/cmake/: mavros-interfacesConfig.cmake
rb5_flight/devel/share/mavros_test/cmake/: mavros_testConfig.cmake
rb5_flight/devel/share/mocap_optitrack/cmake/: mocap_optitrackConfig.cmake
rb5_flight/devel/share/natnet_ros_cpp/cmake/: natnet_ros_cpp-msg-extras.cmake  natnet_ros_cppConfig.cmake
rb5_flight/devel/share/optitrack-vrpn/cmake/: optitrack-vrpnConfig.cmake
rb5_flight/devel/share/rb5_navigation/cmake/: rb5_navigation-msg-paths.cmake  rb5_navigationConfig.cmake
rb5_flight/devel/share/rb5_simulation/cmake/: rb5_simulationConfig.cmake
rb5_flight/devel/share/roseus/ros/natnet_ros_cpp/: manifest.l
rb5_flight/devel/share/roseus/ros/rb5_navigation/: manifest.l
rb5_flight/devel/share/roseus/ros/rb5_navigation/msg/: ImageWithCentroids.l
rb5_flight/src/mavros/: ros_environment.sh
rb5_flight/src/mavros-interface/: CMakeLists.txt  package.xml
rb5_flight/src/mavros-interface/launch/: mavros_test.launch
rb5_flight/src/natnet_ros_cpp/launch/: natnet_ros.launch
rb5_flight/src/optitrack-vrpn/: CMakeLists.txt  package.xml
rb5_flight/src/rb5_navigation/: CMakeLists.txt  package.xml
rb5_flight/src/rb5_navigation/config/: head_camera.yaml  orb_slam_rb5.rviz  px4_config.yaml  rb5_drone_tracking_cam_conf.yaml
rb5_flight/src/rb5_navigation/config/maps/map_config/: my_map1.yaml  my_map2.yaml  my_map3.yaml
rb5_flight/src/rb5_navigation/launch/: maps.launch  mavros_init.launch  monocular_calibrator.launch  orb_slam_test.launch  simple_takeoff.launch  takeoff.launch  teleop_keyboard.launch  webcam.launch
rb5_flight/src/rb5_navigation/scripts/: camera_info.py  image_capture.py  image_pub.py
rb5_flight/src/rb5_navigation/src/: offb_node.cpp  positionPub.cpp  teleop3d.cpp
rb5_flight/src/rb5_navigation/vision/scripts/: defish_img.py  generate_imgs.py  img_to_binary.py  make_map.py
rb5_flight/src/rb5_simulation/: CMakeLists.txt  package.xml
rb5_flight/src/rb5_simulation/config/: gazebo_px4.yaml
rb5_flight/src/rb5_simulation/description/: drone.urdf.xacro
rb5_flight/src/rb5_simulation/launch/: drone_teleop.launch  launch_drone_rviz.launch  optitrack_follower.launch  px4_gazebo.launch
rb5_flight/src/rb5_simulation/scripts/: drone_optitrack_rviz.py  drone_teleop.py  listener.py  publisher.py
rb5_flight/src/rb5_simulation/src/: sim_takeoff.cpp  sim_teleop3d.cpp
